--- a/main.css
+++ b/main.css
@@ -46,7 +46,7 @@ body {
 
 body:after {
     display: none;
-    content: url("images/background/background1.JPG") url("images/background/background2.jpg")
+    content: url("images/background/background1.JPG") url("images/background/background2.png")
 }
 
 h1,
@@ -703,15 +703,15 @@ pre>code {
 }
 
 .shallow-bg {
-    /* background-image: url("images/background/background1.JPG"); */
-    background-image: url("images/background/background2.jpg");
+    /* background-image: url("images/background/background2.png"); */
+    background-image: url("images/background/background2.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center
 }
 
 .deep-bg {
-    background-image: url("images/background/background2.JPG");
+    background-image: url("images/background/background2.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center
